--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "start": "nuxt start",
     "generate": "nuxt generate"
   },
+  "config": {
+    "nuxt": {
+      "host": "0.0.0.0",
+      "port": "8011"
+    }
+  },
   "dependencies": {
     "core-js": "^3.15.1",
     "element-ui": "^2.15.2",
